--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ parameters:
   displayName: Please enter the Admin User password of the source site.
   type: string
 - name: targetsitename
-  displayName: Please enter the targetsite name like "https://<App_Base URL>/bi/site/<Site Name>"
+  displayName: Please enter the targetsite name with site identifier "https://<App_Base URL>/bi/site/<site identifier>"
   type: string
 - name: targetsiteusername
   displayName: Please enter the Admin User name of the target site.
